--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <script type="text/javascript"
-  src="j/lib/dygraph-combined-dev.js"></script>
+        src="j/lib/dygraph-1.0.combined.js"</script>
 </head>
 <body>
 <div id="graphdiv"></div>
