--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
 <head>
+
 <script type="text/javascript"
-        src="j/lib/dygraph-1.0.combined.js"</script>
+        src="j/lib/dygraph-1.0.combined.js"
+</script>
+
 </head>
 <body>
 <div id="graphdiv"></div>
