--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <html>
 <head>
-
-<script type="text/javascript"
-        src="j/lib/dygraph-1.0.combined.js"
+        
+<script src="j/lib/dygraph-1.0.combined.js"
 </script>
 
 </head>
 <body>
 <div id="graphdiv"></div>
-<script type="text/javascript">
+<script 
   g = new Dygraph(
 
     // containing div
