--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-        
+         <title>Dygraphs - Dynamic Zooming Examples</title>
 <script src="j/lib/dygraph-1.0.combined.js"
 </script>
 
